# curox

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  deploy.sh  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 1f3f9334a5a3_rename_logo_url.py  6dc167e014d2_add_password_reset_fields.py  9c0a44739773_make_logo_path_required.py  d0bf20377d60_initial.py
src/: main.py  models.py  setup.py
src/common/: exceptions.py  repo.py  schemas.py
src/common/utils/: other.py  responses.py  token.py
src/core/: cache.py  config.py  database.py  exceptions.py  logger.py
src/core/auth/: __init__.py  auth.py  backend.py  bearer.py  jwt.py
src/core/mail/: __init__.py
src/core/mail/templates/: base.html  staff-add.html
src/core/mail/templates/auth/: password-reset-success.html  password-reset.html
src/core/mail/templates/events/: new-ticket.html
src/core/sms/: __init__.py
src/core/storage/: backend.py
src/features/auth/: dependencies.py  models.py  repo.py  schemas.py  utils.py
src/features/auth/tests/v1/: test_router.py
src/features/auth/v1/: router.py
src/features/companies/: dependencies.py  models.py  schemas.py  utils.py
src/features/companies/repo/: __init__.py  companies_repo.py  staff_repo.py
src/features/companies/v1/: router.py
src/features/events/: dependencies.py  models.py  repo.py  schemas.py
src/features/events/utils/: pdf.py  ticket.py
src/features/events/v1/: router.py
