[project]
name = "events-backend"
version = "0.0.1"
description = ""
authors = [
    {name = "Phelix", email = "dev.phelixochieng@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0,<0.112.0",
    "sqlalchemy>=2.0.31,<2.1.0",
    "pydantic-settings>=2.3.4,<2.4.0",
    "psycopg2-binary>=2.9.9,<2.10.0",
    "alembic>=1.13.2,<1.14.0",
    "pyjwt>=2.8.0,<2.9.0",
    "passlib>=1.7.4,<1.8.0",
    "bcrypt>=4.1.3,<4.2.0",
    "pendulum>=3.0.0,<3.1.0",
    "qrcode[pil]>=7.4.2,<7.5.0",
    "reportlab>=4.2.2,<4.3.0",
    "python-multipart>=0.0.9,<0.0.10",
    "fastapi-mail>=1.4.1,<1.5.0",
    "loguru>=0.7.2,<0.8.0",
    "uvicorn>=0.34.3",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0,<0.28.0",
    "pytest>=8.2.2,<8.3.0",
    "pytest-cov>=5.0.0,<5.1.0",
]

[tool.flit.module]
name = "src"

[build-system]
requires = ["flit_core>=3.9.0"]
build-backend = "flit_core.buildapi"

